--- a/Diver-Pacman/Pacmangame.css
+++ b/Diver-Pacman/Pacmangame.css
@@ -21,6 +21,8 @@ body {
 
 h1 {
   font-family: 'Eight Track', sans-serif;
+  font-style: normal;
+  font-weight: normal;
   text-align: center;
   color: #eefc12;
 }
